add cmdline options

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -158,6 +158,11 @@
 					</ul>
 
 	  <div id="adv3" style="display: none;" >
+
+     <label for="cmdline">Grub options (optional): <input size="20"
+     id="cmdline" name="cmdline" /> Will be used during installation
+     and for the new system </label>
+
 	    <ul>
 	    <li style="padding:0px !important; background: none">
 	    <input type="radio" name="cl8" value="REBOOT" /> reboot computer after installation
