minor text change

--- a/talks/index.html
+++ b/talks/index.html
@@ -98,14 +98,14 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 <li> A talk at the <a href="http://www.netways.de/osdc/y2011">OSDC</a> (Open Source Data Center Conference 2011)
 <a href="../doc/osdc-2011.pdf">(Slides)</a>
 
-<li> A short talk at the <a href="https://sysadmin.miniconf.org/programme15.html">
+<li> A talk at the <a href="https://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
 <a href="../doc/lca2015-thomas_lange-fai.pdf">Slides</a>, 
 <a href="../videos/FAI_the_universal_deployment_tool.webm">Video</a>, 
 <a href="https://www.youtube.com/watch?v=_oAmsN_8NRQ">Youtube</a>
 
 
-<li> A short <a href="https://chemnitzer.linux-tage.de/2015/de/programm/beitrag/239">talk (audio in german)</a> at the Chemnitzer Linuxtag 2015
+<li> A <a href="https://chemnitzer.linux-tage.de/2015/de/programm/beitrag/239">talk (audio in german)</a> at the Chemnitzer Linuxtag 2015
 <a href="../doc/chemnitz-2015.pdf">(Slides)</a>
 <li> A talk a Chaos Computer Club Cologne (C4) (2015)
 <li> A <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">talk</a> at the Debian Conference (DebConf 15) in Heidelberg <a href="../doc/338-FAI--The-Universal-Installation-Tool.pdf">slides</a> and
