add info about UEFI

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -36,7 +36,8 @@
 				This installation image will automatically install the OS and
 				applications onto the computer. No network connection is needed, since
 				all packages are on the installation media. You can burn this image
-				onto a CD/DVD or write it to an USB stick. <p><b>All data on the first disk will be
+				onto a CD/DVD or write it to an USB
+				stick. Legacy BIOS and UEFI are supported.<p><b>All data on the first disk will be
 					overridden without any further confirmation</b>.</p>
 
 				<p>
