new images for 5.9

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,7 +33,7 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.8.7.iso" style="text-decoration: none">
+<a href="faicd64-large_5.9.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
@@ -48,8 +48,8 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.8.7.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (667 MB)</span>
+<a href="faicd64-small_5.9.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (670 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,7 +62,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.8.7.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.9.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
@@ -76,8 +76,8 @@ This image only installs Ubuntu 18.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.8.7.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Autodiscover CD &nbsp; (29 MB) </span>
+<a href="faicd64-autodiscover_5.9.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Autodiscover CD &nbsp; (31 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -87,16 +87,14 @@ Boot only image which autodiscovers the FAI server.
 </p>
 <br>
 
-<p style="text-align: center;">
-All installation images use Debian 10 aka buster, FAI 5.8.7, kernel 4.19, amd64 architecture,
-<a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
+All installation images use Debian 10 aka buster, FAI 5.9, kernel 4.19, amd64 architecture,
+<a href=sha256sums.asc>sha256sum.asc</a> of the ISO's. The can boot
+from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
+<p style="text-align: center;">
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
 service</a></b>. This also supports Debian 9 and 10 with a
 backports kernel.
-<HR>
-<p>
-<br>
 
 <!-- prepared for buster
 
@@ -118,7 +116,7 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.8.7.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.9.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
@@ -150,13 +148,9 @@ the installation media.
 <li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
 , <a href="https://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
 
-<li> <a href="../fai-cd-stretch">Old CD images</a>
-for Debian 9 aka stretch</li>
-</ul>
-
 <hr>
 <ADDRESS>
-Thu, 19 Sep 2019 16:31:47 +0200
+Tue, 07 Jan 2020 13:21:16 +0100
 </ADDRESS>
 
 
