--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build 
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.8.7.iso" style="text-decoration: none">
+<a href="/fai-cd/faicd64-large_5.9.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
 </a>
 </span>
@@ -59,11 +59,11 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[Oct 11-16 2019] Thomas will be in Boston, MA joining the Debian Cloud
-sprint</a></li>
-<li>[5 Oct 2019] FAI 5.8.9 released</a></li>
+<li>[Jan 7, 2020] FAI 5.9 is released, new images available
+  including <b>UEFI</b> support</a></li>
+  <li>[Jan 30 - Feb 2nd 2020] Thomas will be at FOSDEM and at the <a href="https://wiki.debian.org/DebianEvents/be/2020/MiniDebCamp">MiniDebCamp</a></li>
+  <li>[Oct 11-16 2019] Thomas was in Boston, MA joining the Debian Cloud sprint</a></li>
 <li>[August 2019] Thomas gave a <a href="https://media.ccc.de/v/froscon2019-2341-faime_ein_service_fur_individuelle_installationen">talk</a> at <a href="https://www.froscon.de">FrOSCon</a></li>
-<li>[July/August 2018] I was at <a href="https://debconf18.debconf.org/">DebConf 18</a> in Taiwan and gave a <a href="https://debconf18.debconf.org/talks/53-faime-a-build-service-for-installation-and-cloud-images/">talk</a></li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
