move finished items

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -41,29 +41,28 @@ contact before you start working.
 <ul>
 <li> --- TODO ---
 <li> add Ubuntu support to FAI.me service
-<li> add grub cmdline options to FAI.me service
-<li> UEFI support for fai-cd
 <li> more crazy features for FAI.me
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
-<li> template engine for fcopy, for e.g simple variable substitution? 
+<li> UEFI support for fai-cd
+<li> add grub cmdline options to FAI.me service
+<li> template engine for fcopy, for e.g simple variable substitution?
 <li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> new command for building cloud images with FAI
 <li> btrfs and NVMe support for setup-storage
 <li> replace live-boot with dracut in fai-cd
 <li> support for cloning machines with file system images
 <li> major update of FAI guide
-<li> --- TODO's for the next versions ---
+<li> --- LONG TERM ---
+<li> zfs support?
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
-<li> --- LONG TERM ---
-<li> zfs support?
 </ul>
 <br>
 <HR>
 <ADDRESS>
-Tue, 05 Mar 2019 18:20:30 +0100
+Wed Jan  8 13:04:21 CET 2020
 </ADDRESS>
 
       </div>
