--- a/references/index.html
+++ b/references/index.html
@@ -140,6 +140,8 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/ise.png" ></a>
 <a href="https://lihas.de">
 <img class="imgframe" alt="FAI user" src="pics/lihas.png" ></a>
+<a href="http://www.info.univ-angers.fr/leria/">
+<img class="imgframe" alt="FAI user" src="pics/angers.png" ></a>
 
 </span>
 
