add bullseye (testing) support

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -100,12 +100,13 @@ password will be generated </label>
 
 <select name="suite" >
                   <option value="buster">Debian 10 "buster" (stable) </option>
+                  <option value="bullseye">Debian "bullseye" (testing) </option>
                   <option value="stretch"> Debian 9 "stretch" (olstable) </option>
       </select> Select a distribution
 &ensp; &ensp;
 <span style="padding:0px !important;">
 <input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
-backports including newer kernel</span>
+backports including newer kernel (not for testing)</span>
 <p></p>
 <select name="desktop" >
                   <option value="" selected="selected" >Plain text console, no X11 </option>
