--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -114,12 +114,14 @@
 					<p>
 					<select name="suite" >
 						<option	value="buster">Debian 10 "buster" (stable) </option>
+						<option	value="bullseye">Debian "bullseye" (testing) </option>
 						<option value="stretch"> Debian 9 "stretch" (oldstable) </option>
 					</select> Distribution
 					&ensp; &ensp;
 					<span style="padding:0px !important;">
 						<input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
-						backports including newer kernel</span>
+						backports including
+						newer kernel (not for testing)</span>
 
 					</p>
 					<p>
