--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,7 +33,7 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.9.2.iso" style="text-decoration: none">
+<a href="faicd64-large_5.9.4.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
@@ -48,8 +48,8 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.9.2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (689 MB)</span>
+<a href="faicd64-small_5.9.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (670 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,22 +62,22 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.9.2.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.9.4.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.2 GB)</span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
-This image only installs Ubuntu 18.04 LTS. All packages are included.
+This image only installs Ubuntu 20.04 LTS. All packages are included.
 <p>
 <p> &nbsp;
 <p>
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.9.2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Autodiscover CD &nbsp; (33 MB) </span>
+<a href="faicd64-autodiscover_5.9.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Autodiscover CD &nbsp; (31 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 </p>
 <br>
 
-All installation images use Debian 10 aka buster, FAI 5.9.2, kernel 4.19, amd64 architecture,
+All installation images use Debian 10 aka buster, FAI 5.9.4, kernel 4.19, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's. The can boot
 from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
@@ -125,7 +125,7 @@ and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 <h3>Short description for the FAI CD images</h3>
 <ul>
 <li> These installation images can install Debian 10 (XFCE and GNOME),
-Ubuntu 18.04 and CentOS 7, without the need of an install server
+Ubuntu 20.04 and CentOS 8, without the need of an install server
 <li> No network is needed and you can install the whole system from
 the installation media.
 
@@ -150,7 +150,7 @@ the installation media.
 
 <hr>
 <ADDRESS>
-Tue, 07 Jan 2020 13:21:16 +0100
+Tue Apr 28 14:25:20 CEST 2020
 </ADDRESS>
 
 
