--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,37 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Alexandre Duplaix, Sagemcom
+<br><b>Date:</b> Wed, 20 May 2020 06:21:49 +0000
+<pre>
+How many hosts have you installed using fai? <b>~ more than 3000</b> (prod) since 2015
+Which version of fai are you using? now <b>5.9.3</b> for all, before : 4.3.2, 5.0.3, 5.8.4
+Which version are you using as your install kernel?
+      3.13 (trusty), 4.13 (xenial), 4.19.0-8 (buster)
+      4.19.30 (ubuntu 12.04, 14.04 & 16.04)
+
+Which types of hosts are you installing with fai? desktops/servers (a lot of kind of servers)
+
+How do you boot your hosts?
+ via network (PXE, DHCP): Yes
+            using FAI-CD: Yes (offshore partners with basefiles, squashfs & pakages via http)
+          from USB stick: Yes idem
+
+Does the default install kernel recognize all your hardware? Yes most of time
+Which drivers are missing? HardDisk/SSD/M2 mainly. Some problems with network cards also with
+     Debian and Dell 5300 desktop for exemple but the last debian buster kernel has fixed the problem.
+
+Do you manage your configuration space under version control? git
+How big is your config space (Mbytes, # of files)? > 600MB (12 files rebuilt via mk-basefiles), ~700 files
+How many files do you have in ../config/files? ~ 350
+What types of scripts are you using for local customization? shell only
+
+<b>What is the business of your company/organisation?</b> box decoder, wifi router, meter.., <a href="https://www.sagemcom.com/">Sagemcom</a>
+<br><b>Additional comments:</b>
+FAI is a very powerful software, thank you very much for your work, we hope it will get the success it deserves.
+</pre> <HR>
+
+
 
 <b>From:</b> Mike Gabriel,  sunweaver === debian dot=org
 <br><b>Date:</b> Wed, 19 Feb 2020 08:56:14 +0000
