--- a/references/index.html
+++ b/references/index.html
@@ -144,6 +144,8 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/angers.png" ></a>
 <a href="https://das-netzwerkteam.de/">
 <img class="imgframe" alt="FAI user" src="pics/netzwerkteam.png" ></a>
+<a href="https://sagemcom.com/">
+<img class="imgframe" alt="FAI user" src="pics/sagemcom.png" ></a>
 
 </span>
 
