add info about repository

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -87,9 +87,9 @@
 					</select>  Disk partitioning scheme
 					</p>
 
-					<label for="repo">Add one public available repository:
+					<label for="repo">Add one public available Debian package repository:
 						<input size="14" id="repo" name="repo" /> Only http(s) is allowed.
-						<b>This feature is beta</b>.</label>
+					</label>
 
 					</div>
 
