--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,28 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Frank Steinberg, last name at ibr.cs.tu-bs dot .de
+<br><b>Date:</b> Wed, 27 May 2020 13:20:27 +0200
+<pre>
+How many hosts have you installed using fai? <b> currently ~180</b>, over the years >1000
+
+Which version of fai are you using? <b>5.3</b>
+Which version are you using as your install kernel? 4.9.0 (Debian)
+
+Which types of hosts are you installing with fai? desktops, servers, many types of VMs
+How do you boot your hosts? PXE
+Does the default install kernel recognize all your hardware? in the past some drivers have been missing, now we are happy
+Do you manage your configuration space under version control? no
+How big is your config space (Mbytes, # of files)? 12MB, 673 files
+How many files do you have in ../config/files? 466
+What types of scripts are you using for local customization? 99% shell
+
+<b>What is the business of your company/organisation?</b> <a href="https://www.ibr.cs.tu-bs.de">TU Braunschweig </a>
+<br><b>Additional comments:</b>
+happy for a long time, no updates for a long time :-)
+</pre> <HR>
+
+
 <b>From:</b> Alexandre Duplaix, Sagemcom
 <br><b>Date:</b> Wed, 20 May 2020 06:21:49 +0000
 <pre>
