--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -89,6 +89,9 @@
 
 					<label for="repo">Add one public available Debian package repository:
 						<input size="14" id="repo" name="repo" /> Only http(s) is allowed.
+Examples:<p> <tt>https://download.proxmox.com/debian/pve buster pve-no-subscription</tt>
+					  <br>
+					    <tt>https://download.docker.com/linux/debian buster stable</tt>
 					</label>
 
 					</div>
