--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,30 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Jan Hanten
+<br><b>Date:</b> Wed, 10 Jun 2020 00:26:13 +0200 (CEST)
+<pre>
+How many hosts have you installed using fai? <b>about 20</b>
+Which version of fai are you using? <b>5.8</b> (buster repo) and 5.3 (stretch repo)
+
+Which types of hosts are you installing with fai? epics control server (vms and real machines)
+
+Which version are you using as your install kernel? plain Debain stretch and plain debian buster
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? -
+
+Do you manage your configuration space under version control? yes, svn
+How big is your config space (Mbytes, # of files)? 328 MB
+How many files do you have in ../config/files? 140
+What types of scripts are you using for local customization? bash, cfengine
+
+<b>What is the business of your company/organisation?</b> research, <a href=" https://www.ikp.tu-darmstadt.de/dasinstitut/index.de.jsp">Institut für Kernphysik</a>, TU-Darmstadt
+<br><b>Additional comments:</b>
+To install our control system servers for controlling the S-DALINAC
+</pre> <HR>
+
+
 <b>From:</b> Frank Steinberg, last name at ibr.cs.tu-bs dot .de
 <br><b>Date:</b> Wed, 27 May 2020 13:20:27 +0200
 <pre>
