--- a/download/index.html
+++ b/download/index.html
@@ -78,7 +78,7 @@ and put this into the basefiles subdirectory.
 
 
 <br>
-Up-to-date official packages:
+Old official packages:
 <p>
 <div class="featurebox"><h3>
 <pre>
