update my personal web page url

--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@ Thomas Lange is the main author of FAI. He's a Debian Developer since 2000 and a
 1992. He started the FAI project in 1999.
 
 <br>
-<a href="http://www.informatik.uni-koeln.de/~lange">Personal web page</a>
+<a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Personal web page</a>
 <br>
 Mail: lange =@= fai-project dOt org
 <br>
