--- a/features/index.html
+++ b/features/index.html
@@ -87,7 +87,7 @@ a fork of GOsa
 <h1>FAI History</h1>
 FAI is rock-solid. It's now more than 16 years old. FAI was started in 1999 at
 the University of Cologne, when
-<a href="http://www.informatik.uni-koeln.de/~lange">Thomas</a> had to
+<a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas</a> had to
 organize an installation of a Linux cluster. Today, FAI is regularly used in <a href="/reports/">varying environments</a>,
 ranging from a dozen machines up to several thousands machines.
 <p>
