--- a/team/index.html
+++ b/team/index.html
@@ -40,7 +40,7 @@
 
 <tr>
      <td><img src="/team/mrfai.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
-     <td><strong><a href="http://www.informatik.uni-koeln.de/~lange">Thomas Lange</a></strong><br />lange _a_t fai-project.org<br />Mrfai on #fai<br />project leader</td>
+     <td><strong><a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas Lange</a></strong><br />lange _a_t fai-project.org<br />Mrfai on #fai<br />project leader</td>
 </tr>
 
 <tr>
