add german docs from Karsten

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -234,6 +234,17 @@ FAI. This code is no longer maintained.
 <h2>FAI documentation in German</h2>
 <ul>
 
+
+<li> Some documentation about FAI server setup, and crfeating and
+  booting from CD USB stick. (2020)
+  <ul>
+    <li><a href="/doc/karsten/fai-flowchart.odg">A flowchart</a>
+    <li><a href="/doc/karsten/FAI%20Booten%20von%20CD%20oder%20USB.odt">FAI Booten von CD oder USB.odt</a>
+    <li><a href="/doc/karsten/FAI%20Installation%20des%20Servers.odt">FAI Installation des Servers.odt</a>
+    <li><a href="/doc/karsten/rinse%20verwenden.pdf">rinse verwenden.pdf</a>
+    <li><a href="/doc/karsten/rinse%20verwenden.odt">rinse verwenden.odt</a>
+</ul>
+
 <li> <a href="https://systemausfall.org/wikis/howto/FAI">Howto</a>
 including network server setup. (2014)
 
