--- a/download/index.html
+++ b/download/index.html
@@ -57,7 +57,7 @@ or
 
 <p>
 
-<li> FAI packages from the official <A href=" https://fai-project.org/download/stretch/">project repository</A> or
+<li> FAI packages from the official <A href=" https://fai-project.org/download/buster/">project repository</A> or
 from a <a href=http://deb.debian.org/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
