add LXQT desktop

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -132,6 +132,7 @@ Examples:<p> <tt>https://download.proxmox.com/debian/pve buster pve-no-subscript
 						<option value="">Plain text console, no X11 </option>
 						<option value="XFCE">XFCE desktop</option>
 						<option value="LXDE">LXDE desktop</option>
+						<option value="LXQT">LXQT desktop</option>
 						<option value="GNOME" selected="selected">GNOME desktop</option>
 						<option value="KDE">KDE desktop</option>
 						<option value="MATE">MATE desktop</option>
