--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -112,6 +112,7 @@ backports including newer kernel (not for testing)</span>
                   <option value="" selected="selected" >Plain text console, no X11 </option>
                   <option value="XFCE">XFCE desktop</option>
                   <option value="LXDE">LXDE desktop</option>
+                  <option value="LXQT">LXQT desktop</option>
                   <option value="GNOME">GNOME desktop</option>
                   <option value="KDE">KDE desktop</option>
                   <option value="MATE">MATE desktop</option>
