--- a/menu.html
+++ b/menu.html
@@ -1,59 +1,1 @@
-      <div id="content-wrap">
-	<div id="utility">
-	  <ul id="nav-secondary">
-
-	    <li class="active"> <a href="/" title="Home">Home</a>
-	      <ul>
-		<li><a href="/references/">References</a></li>
-		<li><a href="/features/" title="Features">Features</a></li>
-		<li><a href="/poster/">Poster / Flyer</a></li>
-		<li><a href="/reports/">Case studies</a></li>
-		<li><a href="/mailinglist/" title="Communication">Mailing Lists / IRC / Wiki</a></li>
-		<li><a href="/cluster/">Clusters built with FAI</a></li>
-	      </ul>
-	  </li>
-	    <li><a href="/FAIme/" title="FAI.me">FAI.me / Build your own</a></li>
-	    <li><a href="/screenshots/" title="Screenshots">Videos / Screenshots</a></li>
-
-	    <li class="active">
-	      <a href="/fai-cd/" title="Download">Download</a>
-	      <ul>
-		<li><a href="/fai-cd/" title="FAI CD">FAI CD</a></li>
-		<li><a href="/download/">Packages</a></li>
-		<li><a href="/download/basefiles/" title="Basefiles">Basefiles</a></li>
-	      </ul>
-	    </li>
-
-	    <li class="active"><a href="/guide/">Documentation</a>
-	      <ul>
-<!--		<li><a href="/guide/" title="Documentation">FAI - Guide</a></li> -->
-<!--		<li><a href="/faq/">FAQ</a></li> -->
-		<li><a href="/fai-guide/">FAI Guide</a></li>
-		<li><a href="/doc/man/" title="man pages">Manual pages</a></li>
-		<li><a href="/otherdocs/">Other documentation</a></li>
-		<li><a href="/talks/">Talk slides and videos</a></li>
-	      </ul>
-	  </li>
-
-	    <li class="active"><a href="/sources/">Developers</a>
-	      <ul>
-		<li><a href="/sources/" title="Sources">Sources / Bugs</a></li>
-		<li><a href="/roadmap/" title="Roadmap">Roadmap</a></li>
-		<li><a href="/team/" title="Team">Team</a></li>
-	     </ul>
-	    </li>
-
-	    <li class="active"><a href="/contact/" title="Contact">Contact / Support</a></li>
-
-<li><a title="Please use the text box below to search" onclick="document.forms['searchform'].elements['q'].focus();">Site search</a>
-
-	 <form id="searchform" method="get" action="http://google.com/search">
-<p>
-  <input type="text"   name="q" size="13" maxlength="255" value=""/>
-  <input type="hidden" name="q" value="site://fai-project.org"/>
-  <input type="submit" name="btnG" value="Go" />
-</p>
-	 </form>
-</li>
-	  </ul>
-	</div>
+<h1>TEXT</h1>
