Created sidebar, small changes on index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--#include virtual="header.html" -->
       <div class="row">
 	<div class="col s12 m4 l3">
-	   <!--#include virtual="sidebar.html" -->
+	  <!--#include virtual="sidebar.html" -->
 	</div>
 	<div class="col s12 m8 l9">
 	  <blockquote>
@@ -36,18 +36,19 @@
 	    machines or on a cloud-computing platform. using
 	    the <a href="/FAIme">FAI.me build service</a>.
 	  </blockquote>
-
 	</div>
-      </div>
-      <div class="row">
-	<div class="col s12 center red">
-	  <p> Motto: Plan your installation, and FAI installs your plan.</p>
-
+	<div class="col s12 m8 l9 center orange">
+	  <h6> Motto: Plan your installation, and FAI installs your plan.</h6>
 	</div>
 
       </div>
+
     </div>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.js"></script>
-  </body>
+</div>
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="js/materialize.js"></script>
+<script>
+  M.AutoInit();
+</script>
+</body>
 </html>
