--- a/header.html
+++ b/header.html
@@ -1,9 +1,89 @@
-<nav>
-  <div class="nav-wrapper grey darken-3">
-    <a href="/" class="brand-logo">FAI - Fully Automatic Installation</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="/FAIme">FAIme</a></li>
-      <li><a href="/contact">Contact</a></li>
-    </ul>
+<nav class="nav-extended grey darken-3">
+  <div class="nav-wrapper">
+    <a href="/" class="brand-logo center">F A I</a>
+    <a href="#" data-target="sidenav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
+
+  </div>
+  <div class="nav-content">
+
   </div>
 </nav>
+
+<ul class="sidenav" id="sidenav">
+  <ul class="collapsible">
+    <li>
+      <div class="collapsible-header">
+	<a href="/">Home</a><i class="material-icons">arrow_drop_down</i>
+      </div>
+      <div class="collapsible-body">
+	<ul>
+          <li><a href="/references/">References</a></li>
+          <li><a href="/features/">Features</a></li>
+          <li><a href="/poster/">Poster / Flyer</a></li>
+          <li><a href="/reports/">Case studies</a></li>
+          <li><a href="/mailinglist/">Mailing Lists / IRC / Wiki</a></li>
+          <li><a href="/cluster/">Clusters built with FAI</a></li>
+	</ul>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/FAIme/">FAI.me / Build your own</a>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/screenshots/">Videos / Screenshots</a>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/fai-cd/" title="Download">Download</a><i class="material-icons">arrow_drop_down</i>
+      </div>
+      <div class="collapsible-body">
+	<ul>
+          <li><a href="/fai-cd/" title="FAI CD">FAI CD</a></li>
+          <li><a href="/download/">Packages</a></li>
+          <li><a href="/download/basefiles/" title="Basefiles">Basefiles</a></li>
+	</ul>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/guide/">Documentation</a><i class="material-icons">arrow_drop_down</i>
+      </div>
+      <div class="collapsible-body">
+	<ul>
+          <li><a href="/fai-guide/">FAI Guide</a></li>
+          <li><a href="/doc/man/" title="man pages">Manual pages</a></li>
+          <li><a href="/otherdocs/">Other documentation</a></li>
+          <li><a href="/talks/">Talk slides and videos</a></li>
+	</ul>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/sources/">Developers</a><i class="material-icons">arrow_drop_down</i>
+      </div>
+      <div class="collapsible-body">
+	<ul>
+          <li><a href="/sources/" title="Sources">Sources / Bugs</a></li>
+          <li><a href="/roadmap/" title="Roadmap">Roadmap</a></li>
+          <li><a href="/team/" title="Team">Team</a></li>
+	</ul>
+      </div>
+    </li>
+
+    <li>
+      <div class="collapsible-header">
+	<a href="/contact/" title="Contact">Contact / Support</a>
+      </div>
+    </li>
+
+  </ul>
+</ul>
