--- a/index.html
+++ b/index.html
@@ -14,31 +14,63 @@
   </head>
 
   <body>
-
+    <!--#include virtual="header.html" -->
     <div class="container">
-      <!--#include virtual="header.html" -->
       <div class="row">
-	<div class="col s12 m4 l3">
-	  <!--#include virtual="sidebar.html" -->
-	</div>
-	<div class="col s12 m8 l9">
-	  <blockquote>
-	    FAI is a tool for unattended mass deployment of Linux. It's a
-	    system to install and configure Linux systems and software
-	    packages on computers as well as virtual machines, from small
-	    labs to large-scale infrastructures like clusters and virtual
-	    environments. You can take one or more virgin PC's, turn on
-	    the power, and after a few minutes, the systems are installed,
-	    and completely configured to your exact needs, without any
-	    interaction necessary.
-	    <br><br>
-	    It can be used for creating custom disk images used in virtual
-	    machines or on a cloud-computing platform. using
-	    the <a href="/FAIme">FAI.me build service</a>.
-	  </blockquote>
-	</div>
-	<div class="col s12 m8 l9 center orange">
+	<div class="col s12 z-depth-3 center orange">
 	  <h6> Motto: Plan your installation, and FAI installs your plan.</h6>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col s12 m6 l4">
+	  <div class="card grey darken-2">
+	    <div class="card-content white-text">
+              <span class="card-title">About FAI</span>
+              <p>FAI is a tool for unattended mass deployment of Linux. It's a
+		system to install and configure Linux systems and software
+		packages on computers as well as virtual machines, from small
+		labs to large-scale infrastructures like clusters and virtual
+		environments. You can take one or more virgin PC's, turn on
+		the power, and after a few minutes, the systems are installed,
+		and completely configured to your exact needs, without any
+		interaction necessary.</p>
+            </div>
+	  </div>
+	</div>
+
+	<div class="col s12 m6 l4">
+	  <div class="card grey darken-2">
+	    <div class="card-content white-text">
+              <span class="card-title">About FAI.me</span>
+              <p>FAI.me is a tool to create custom Debian disk images used on
+		desktop, in virtual machines or on a cloud-computing
+		platform.
+            </div>
+	    <div class="card-action">
+              <a href="/FAIme">FAI.me</a>
+            </div>
+	  </div>
+	</div>
+
+	<div class="col s12 m6 l4">
+	  <div class="card grey darken-2">
+	    <div class="card-content white-text">
+              <span class="card-title">News</span>
+              <ul class="collection">
+		<li class="collection-item grey darken-2">
+		  [Apr 28, 2020] FAI 5.9.4 is released, new images
+		  available including <b>UEFI</b> support
+		</li>
+		<li class="collection-item grey darken-2">
+		  [Oct 11-16 2019] Thomas was in Boston, MA joining
+		  the Debian Cloud sprint
+		</li>
+		<li class="collection-item grey darken-2">
+		  [Nov 27, 2017] <b>I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
+		</li>
+	      </ul>
+	    </div>
+	  </div>
 	</div>
 
       </div>
