--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
               <a href="/FAIme">FAI.me</a>
             </div>
 	  </div>
+
+	  <div class="card orange center">
+	    <a class="waves-effect waves-light btn-large orange z-depth-0
+		      center"><i class="material-icons
+					left">download</i>FAI ISO (1.1GB)</a>
+	  </div>
 	</div>
 
 	<div class="col s12 m6 l4">
