--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav class="nav-extended grey darken-3">
   <div class="nav-wrapper">
     <a href="/" class="brand-logo center">F A I</a>
-    <a href="#" data-target="sidenav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
+    <a href="#" data-target="sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
   </div>
   <div class="nav-content">
@@ -9,7 +9,7 @@
   </div>
 </nav>
 
-<ul class="sidenav" id="sidenav">
+<ul class="sidenav sidenav-fixed" id="sidenav">
   <ul class="collapsible">
     <li>
       <div class="collapsible-header">
